<resources>
    <string name="app_name">MaGE</string>
    <string name="title_home">Home</string>
    <string name="title_diary">Diary</string>
    <string name="title_alarms">Alarms</string>
    <string name="title_settings">Settings</string>
    <string name="text_saying_mage">Text saying Mage</string>
    <string name="image_of_a_magicians_hat">Image of a magicians hat</string>
    <string name="welcome_to_mage">Welcome to MaGE!</string>
    <string name="what_is_mage"><u>What is MaGE?</u></string>
    <string name="get_started">Get started</string>
    <string name="let_s_go_through_this_journey_together">Let\'s go through this journey together!</string>
    <string name="first_some_details">First, some details!</string>
    <string name="everything_here_is_optional">(Everything here is optional)</string>
    <string name="name">Name</string>
    <string name="birthday">Birthday</string>
    <string name="pronouns">Pronouns</string>
    <string name="selected_item">Selected item:</string>
    <string name="what_is_this_information_used_for"><u>What is this information used for?</u></string>
    <string name="dialog_placeholder">aaaaaa</string>
    <string name="start">start</string>
    <string name="okay">okay</string>
    <string name="now_for_some_basic_settings">Now for some basic settings</string>
    <string name="time_format">Time Format</string>
    <string name="what_is_backed_up"><u>What information is backed up in the cloud?</u></string>
    <string name="date_format">Date Format</string>
    <string name="cloud_backups_optional">Cloud backups are entirely optional\nand will be disabled by default.\nEnable cloud backups?</string>
    <string name="next">Next</string>

    <string-array name="pronouns1">
        <item>-</item>
        <item>She</item>
        <item>He</item>
        <item>They</item>
        <item>It</item>
        <item>Xe</item>
        <item>Fae</item>
        <item>Per</item>
        <item>Ve</item>
        <item>Ze</item>
    </string-array>

    <string-array name="pronouns2">
        <item>-</item>
        <item>Her</item>
        <item>Him</item>
        <item>Them</item>
        <item>They</item>
        <item>Its</item>
        <item>Xem</item>
        <item>Faer</item>
        <item>Per</item>
        <item>Ver</item>
        <item>Hir</item>
    </string-array>

    <string-array name="time_formats">
        <item>12hr</item>
        <item>24hr</item>
    </string-array>

    <string-array name="date_formats">
        <item>dd/mm/yyyy</item>
        <item>mm/dd/yyyy</item>
    </string-array>

    <string name="what_mage_is">
        MaGE is an application designed and developed by a transgender woman
        to be used by other transgender people, in order to make their transition easier.\n\n
        The features of the application were suggested by other Transgender people and has
        been developed following their advice and input, as well as the transitioning experience
        of the developer.\n\n
        In short, MaGE is made by Trans people for Trans people!
    </string>

    <string name="what_the_info_is_used_for">
        None of the information given here will be stored
        anywhere other than your local device, unless you specify otherwise.\n\nThe information given on
        this screen is used to personalise the application and will not be used in any manner outside of
        what you see within MaGE!
    </string>

    <string name="what_is_backed_up_in_the_cloud">
        All information entered in to the application will be stored in the cloud ONLY if you enable it.\n\n
        This feature is entirely optional and should only be used if you are worried about losing your data and/or
        are planning to transfer the data to another device.\n\n
        All cloud data is appropriately encrypted, and the app will function perfectly fine without any cloud backups.\n\n
        If you are vulnerable individual or located in a country where transition may be illegal, it is not recommended to enable
        this feature in any circumstance.
    </string>
    <string name="thanks">Thanks!</string>
    <string name="settings_can_be_changed">Remember that any of these\nsettings can be changed\nat any time from the\nsettings tab</string>
    <string name="go_to_app">Go to app</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alarm_notification_title">Alarm/Notification Title</string>
    <string name="title_activity_new_diary_entry">NewDiaryEntry</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="new_entry"><u>New Entry</u></string>
    <string name="entry_title">Entry Title</string>
    <string name="my_diary_entry">My diary entry</string>
    <string name="entry_text">Entry text</string>
    <string name="floating_button_to_create_new_entry">Floating Button To Create New Entry</string>
    <string name="editing_entry"><u>Editing entry</u></string>
    <string name="new_medication_alarm"><u>New Medication Alarm</u></string>
    <string name="repeat_daily">Repeat Daily</string>
    <string name="alarm_name">Alarm Name</string>

</resources>