<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".firstTimeUserActivities.FirstTimeUserDetailsScreen">

    <include
        android:id="@+id/themainbar"
        layout="@layout/actionbar_nobuttons"
        />

    <TextView
        android:id="@+id/first_some_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/calistoga"
        android:text="@string/first_some_details"
        android:textAlignment="center"
        android:textColor="@color/raisin_black"
        android:textSize="34sp"
        app:layout_constraintTop_toBottomOf="@+id/themainbar"
        tools:layout_editor_absoluteX="97dp" />

    <TextView
        android:id="@+id/everything_is_optional"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/calistoga"
        android:text="@string/everything_here_is_optional"
        android:textAlignment="center"
        android:textColor="@color/raisin_black"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/first_some_details"
        tools:layout_editor_absoluteX="97dp" />

    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/calistoga"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="@color/raisin_black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/everything_is_optional" />

    <TextView
        android:id="@+id/birthday_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/calistoga"
        android:text="@string/birthday"
        android:textAlignment="center"
        android:textColor="@color/raisin_black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_label" />

    <TextView
        android:id="@+id/pronouns_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/calistoga"
        android:text="@string/pronouns"
        android:textAlignment="center"
        android:textColor="@color/raisin_black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthday_label" />

    <ImageButton
        android:id="@+id/birthday_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="72dp"
        android:background="#00FFFFFF"
        android:src="@android:drawable/ic_menu_my_calendar"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/birthday_label"
        app:tint="#7A4C4C" />

    <TextView
        android:id="@+id/birthday_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="44dp"
        android:text="Birthday not selected"
        app:layout_constraintEnd_toStartOf="@+id/birthday_button"
        app:layout_constraintHorizontal_bias="0.362"
        app:layout_constraintStart_toEndOf="@+id/birthday_label"
        app:layout_constraintTop_toTopOf="@+id/birthday_label" />

    <EditText
        android:id="@+id/nameEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintStart_toEndOf="@+id/name_label"
        app:layout_constraintTop_toBottomOf="@+id/everything_is_optional" />

    <Spinner
        android:id="@+id/pronounsSpinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="18dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        app:layout_constraintStart_toEndOf="@+id/pronouns_label"
        app:layout_constraintTop_toBottomOf="@+id/birthday_text" />

    <TextView
        android:id="@+id/slash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/calistoga"
        android:text="/"
        android:textAlignment="center"
        android:textColor="@color/raisin_black"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@id/pronounsSpinner1"
        app:layout_constraintTop_toBottomOf="@+id/birthday_text" />

    <Spinner
        android:id="@+id/pronounsSpinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="18dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        app:layout_constraintStart_toEndOf="@+id/slash"
        app:layout_constraintTop_toBottomOf="@+id/birthday_text" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="32dp"
        android:text="Next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pronouns_label" />

    <TextView
        android:id="@+id/what_is_this_used_for"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="@string/what_is_this_information_used_for"
        android:textAlignment="center"
        android:textColor="@color/Ultramarine"
        app:layout_constraintTop_toBottomOf="@+id/nextButton"
        tools:layout_editor_absoluteX="177dp" />


</androidx.constraintlayout.widget.ConstraintLayout>