<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainTabbedActivities.alarms.NewAlarm">

    <include
        android:id="@+id/themainbar"
        layout="@layout/actionbar_nobuttons"
        />

    <TextView
        android:id="@+id/new_entry_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/new_medication_alarm"
        android:textAlignment="center"
        android:textColor="@color/raisin_black"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/themainbar"
        tools:layout_editor_absoluteX="0dp" />


    <TimePicker
        android:id="@+id/alarm_time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="20dp"
        android:timePickerMode="spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_entry_text" />

    <TextView
        android:id="@+id/new_entry_title_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/alarm_name"
        android:textAlignment="center"
        android:textColor="@color/raisin_black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/alarm_time_picker"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/alarm_name_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="91dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_entry_title_label" />


    <TextView
        android:id="@+id/repeat_daily_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="28dp"
        android:text="@string/repeat_daily"
        android:textAlignment="center"
        android:textColor="@color/raisin_black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alarm_name_entry" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/daily_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/repeat_daily_label"
        app:layout_constraintTop_toBottomOf="@+id/alarm_name_entry" />

    <Button
        android:id="@+id/new_alarm_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="65dp"
        android:text="Save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daily_toggle" />


</androidx.constraintlayout.widget.ConstraintLayout>